tests/reject/dup_struct_enum.ty
enum X:
    A
struct X:
    a: int
fn main():
    print("no")
